# moleco

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
devbin/: generate_readme_images
src/: common.rs  layouts.rs  lib.rs  main.rs  tokenize.rs
tests/: test_content.rs  test_moleco.rs  test_tokenization.rs
