[package]
name = "moleco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.2.0"
csv = "1.3.0"
exitcode = "1.1.2"
image = "0.24.9"
log = "0.4.21"
num-bigint = "0.4.4"
num-traits = "0.2.18"
palette = "0.7.5"
pretty_env_logger = "0.5.0"
prettytable = "0.10.0"
rand = "0.8.5"
serde_json = "1.0.115"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
viuer = "0.7.1"
