[package]
name = "moleco"
description = "Tool to generate color swatches for chemical compounds"
version = "0.0.1"
edition = "2021"
authors = ["Szczepan Cieślik <szczepan.cieslik@gmail.com>"]
readme = "README.md"
repository = "https://github.com/beregond/moleco/"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.3", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.2.0"
csv = "1.3.0"
dialoguer = "0.11.0"
exitcode = "1.1.2"
image = "0.24.9"
little_exif = "0.3.2"
log = "0.4.21"
num = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.18"
palette = "0.7.5"
pretty_env_logger = "0.5.0"
prettytable = "0.10.0"
rand = "0.8.5"
serde_json = "1.0.115"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
viuer = "0.7.1"
